--- a/PhDManager.Web/Components/App.razor
+++ b/PhDManager.Web/Components/App.razor
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="PhDManager.Web.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
-    <HeadOutlet @rendermode="InteractiveServer" />
+    <HeadOutlet />
 </head>
 
 <body>
-    <Routes @rendermode="InteractiveServer" />
+    <Routes />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 </body>
