--- a/PhDManager.Web/Components/Pages/Login.razor
+++ b/PhDManager.Web/Components/Pages/Login.razor
@@ -48,8 +48,9 @@
         var result = await UserService.Login(UserLogin);
 
         if (result is null)
-    {
+        {
             _errorVisible = true;
+            return;
         }
         NavigationManager.NavigateTo("/");
     }
