--- a/PhDManager.Web/Components/Pages/Login.razor
+++ b/PhDManager.Web/Components/Pages/Login.razor
@@ -15,6 +15,8 @@
 </RadzenAlert>
 
 <EditForm Model="UserLogin" FormName="login" OnSubmit="@HandleSubmit">
+    <AntiforgeryToken />
+
     <RadzenStack>
         <RadzenLabel For="@((UserLogin user) => user.Username)" Text="Username" Component="Username" />
         <RadzenTextBox @bind-Value="@UserLogin.Username" Name="Username" />
