--- a/PhDManager.Web/Components/App.razor
+++ b/PhDManager.Web/Components/App.razor
@@ -7,7 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="PhDManager.Web.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
+    <RadzenTheme Theme="humanistic" @rendermode="InteractiveServer" />
     <HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)" />
 </head>
 
