Auth autoupdate and Admin page base.

--- a/PhDManager.Web/Components/Layout/MainLayout.razor
+++ b/PhDManager.Web/Components/Layout/MainLayout.razor
@@ -7,7 +7,6 @@
         <RadzenStack style="height: 100%" Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center" AlignItems="AlignItems.Center" Gap="0">
             <RadzenRow class="rz-p-1" JustifyContent="JustifyContent.SpaceBetween" AlignItems="AlignItems.Center" Style="width: 100%;">
                 <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
-
                     <AuthorizeView>
                         <Authorized>
                             <RadzenSidebarToggle Click="@(() => _sidebarExpanded = !_sidebarExpanded)" />
@@ -36,6 +35,12 @@
         <Authorized>
             <RadzenSidebar @bind-Expanded="@_sidebarExpanded">
                 <RadzenPanelMenu>
+                    <AuthorizeView Roles="Admin" Context="adminContext">
+                        <Authorized>
+                            <RadzenPanelMenuItem Path="admin-panel" Text="Admin Panel" Icon="admin_panel_settings" />
+                        </Authorized>
+                    </AuthorizeView>
+
                     <RadzenPanelMenuItem Path="" Text="Home" Icon="home" />
                 </RadzenPanelMenu>
             </RadzenSidebar>
