--- a/PhDManager.Web/Components/Pages/Login.razor
+++ b/PhDManager.Web/Components/Pages/Login.razor
@@ -54,6 +54,6 @@
             _errorVisible = true;
             return;
         }
-        NavigationManager.NavigateTo("/");
+        NavigationManager.NavigateTo("/", true);
     }
 }
