--- a/PhDManager.Web/wwwroot/theme.css
+++ b/PhDManager.Web/wwwroot/theme.css
@@ -1,6 +1,7 @@
 ﻿:root {
     --rz-primary: #ffc300;
     --rz-primary-light: #ffd500;
+    --rz-on-primary-lighter: #ffd500;
     --rz-secondary: #001d3d;
     --rz-secondary-light: #003566;
     --rz-secondary-dark: #000814;
