--- a/PhDManager.Web/Components/_Imports.razor
+++ b/PhDManager.Web/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using Radzen.Blazor
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.Extensions.Localization
