--- a/PhDManager.Web/Components/Layout/MainLayout.razor
+++ b/PhDManager.Web/Components/Layout/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+@using PhDManager.Core.Models
+
 <RadzenComponents @rendermode="InteractiveServer" />
 
 <RadzenLayout>
@@ -44,13 +46,14 @@
             <RadzenSidebar @bind-Expanded="@_sidebarExpanded">
                 <RadzenPanelMenu DisplayStyle="@(_sidebarExpanded ? MenuItemDisplayStyle.IconAndText : MenuItemDisplayStyle.Icon)" ShowArrow="false">
 
-                    <AuthorizeView Roles="Admin" Context="adminContext">
+                    <AuthorizeView Roles=@($"{nameof(Role.Admin)}") Context="adminContext">
                         <Authorized>
                             <RadzenPanelMenuItem Path="admin-panel" Text="Admin Panel" Icon="admin_panel_settings" />
                         </Authorized>
                     </AuthorizeView>
 
                     <RadzenPanelMenuItem Path="" Text="Home" Icon="home" />
+                    <RadzenPanelMenuItem Path="thesis" Text="Thesis Selection" Icon="assignment" />
 
                 </RadzenPanelMenu>
             </RadzenSidebar>
