--- a/PhDManager.Web/Components/Pages/ThesisOverview.razor
+++ b/PhDManager.Web/Components/Pages/ThesisOverview.razor
@@ -13,10 +13,10 @@
 }
 else
 {
-    <RadzenCard>
+    <RadzenStack>
         <RadzenText TextStyle="TextStyle.H3">@_thesis?.Title</RadzenText>
         <RadzenText>@_thesis?.Description</RadzenText>
-    </RadzenCard>
+    </RadzenStack>
 }
 
 @code {
