--- a/PhDManager.Web/Components/Pages/ThesisOverview.razor
+++ b/PhDManager.Web/Components/Pages/ThesisOverview.razor
@@ -21,7 +21,7 @@ else
 
 @code {
     [Parameter]
-    public Guid ThesisId { get; set; }
+    public int ThesisId { get; set; }
 
     private Thesis? _thesis;
 
