--- a/PhDManager.Web/Components/App.razor
+++ b/PhDManager.Web/Components/App.razor
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
     <link href="theme.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)" />
 </head>
 
