--- a/PhDManager.Web/Components/Pages/Home.razor
+++ b/PhDManager.Web/Components/Pages/Home.razor
@@ -9,16 +9,24 @@
 
 <PageTitle>@Localizer["Home"]</PageTitle>
 
-<RadzenStack style="min-height: 100%;" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Center" Gap="0">
+<RadzenStack Style="min-height: 92vh;" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Center" Gap="0">
     <AuthorizeView>
         <Authorized>
             <RadzenText TextStyle="TextStyle.H3">@(string.Format(Localizer["WelcomeTitle"], context.User.Identity?.Name))</RadzenText>
             <RadzenText TextStyle="TextStyle.Subtitle1">@Localizer["WelcomeText"]</RadzenText>
         </Authorized>
         <NotAuthorized>
-            <RadzenText TextStyle="TextStyle.H3">PhD Manager</RadzenText>
-            <RadzenText TextStyle="TextStyle.Subtitle1">Making your PhD studies easier.</RadzenText>
-            <RadzenButton Text="Log in" Click="@(() => NavigationManager.NavigateTo("login"))"></RadzenButton>
+            <RadzenRow Style="width: 100%; height: 100%;" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Center">
+                <RadzenColumn Size="4">
+                    <RadzenText TextStyle="TextStyle.H2" Style="font-weight: 600;">Make your study <span class="underline">easier</span></RadzenText>
+                    <RadzenText TextStyle="TextStyle.H3" Style="color: dimgray;">Join now and see the difference!</RadzenText>
+                    <RadzenButton Text="Log In" Click="@(() => NavigationManager.NavigateTo("login"))"></RadzenButton>
+                    <RadzenButton Text="Search Theses" Click="@(() => NavigationManager.NavigateTo("theses"))"></RadzenButton>
+                </RadzenColumn>
+                <RadzenColumn Size="4">
+                    <RadzenImage Path="digital-nomad.svg" />
+                </RadzenColumn>
+            </RadzenRow>
         </NotAuthorized>
     </AuthorizeView>
 </RadzenStack>
