--- a/PhDManager.Web/Components/Layout/MainLayout.razor
+++ b/PhDManager.Web/Components/Layout/MainLayout.razor
@@ -52,7 +52,7 @@
         </RadzenPanelMenu>
     </RadzenSidebar>
 
-    <RadzenBody class="rz-p-4">
+    <RadzenBody id="body">
         @Body
     </RadzenBody>
 
