--- a/PhDManager.Web/Components/Pages/Auth/Login.razor
+++ b/PhDManager.Web/Components/Pages/Auth/Login.razor
@@ -8,26 +8,29 @@
 
 <PageTitle>Log in</PageTitle>
 
-<RadzenText TextStyle="TextStyle.H3">Login</RadzenText>
+<RadzenStack class="full-size" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Center">
+    <RadzenImage Style="width: 20em;" Path="fingerprint.svg" />
+    <RadzenText TextStyle="TextStyle.H4">Log in</RadzenText>
 
-<RadzenAlert @bind-Visible="@_errorVisible" AlertStyle="AlertStyle.Danger" Close="@OnClose">
-    The credentials you provided are invalid. Please try again.
-</RadzenAlert>
+    <RadzenAlert class="width-half" @bind-Visible="@_errorVisible" AlertStyle="AlertStyle.Danger" Close="@OnClose">
+        The credentials you provided are invalid. Please try again.
+    </RadzenAlert>
 
-<EditForm Model="UserLogin" FormName="login" OnSubmit="@HandleSubmit">
-    <AntiforgeryToken />
+    <EditForm class="width-half" Model="UserLogin" FormName="login" OnSubmit="@HandleSubmit">
+        <AntiforgeryToken />
 
-    <RadzenStack>
-        <RadzenLabel For="@((UserLogin user) => user.Username)" Text="Username" Component="Username" />
-        <RadzenTextBox @bind-Value="@UserLogin.Username" Name="Username" />
+        <RadzenStack>
+            <RadzenLabel For="@((UserLogin user) => user.Username)" Text="Username" Component="Username" />
+            <RadzenTextBox @bind-Value="@UserLogin.Username" Name="Username" />
 
-        <RadzenLabel For="@((UserLogin user) => user.Password)" Text="Password" Component="Password" />
-        <RadzenPassword @bind-Value="@UserLogin.Password" Name="Password" />
+            <RadzenLabel For="@((UserLogin user) => user.Password)" Text="Password" Component="Password" />
+            <RadzenPassword @bind-Value="@UserLogin.Password" Name="Password" />
 
 
-        <RadzenButton Text="Login" ButtonType="ButtonType.Submit" ButtonStyle="ButtonStyle.Primary" />
-    </RadzenStack>
-</EditForm>
+            <RadzenButton class="fit" Text="Login" ButtonType="ButtonType.Submit" ButtonStyle="ButtonStyle.Primary" />
+        </RadzenStack>
+    </EditForm>
+</RadzenStack>
 
 @code {
     [SupplyParameterFromForm]
