--- a/PhDManager.Web/Components/Pages/Home.razor
+++ b/PhDManager.Web/Components/Pages/Home.razor
@@ -10,14 +10,16 @@
 
 <PageTitle>@Localizer["Home"]</PageTitle>
 
-<RadzenStack Style="min-height: 92vh;" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Center" Gap="0">
+<RadzenStack class="full-size" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Center" Gap="0">
+    <div class="full-size circle circle-bottom"></div>
+    <div class="full-size circle circle-top"></div>
     <AuthorizeView>
         <Authorized>
             <RadzenText TextStyle="TextStyle.H3">@(string.Format(Localizer["WelcomeTitle"], context.User.Identity?.Name))</RadzenText>
             <RadzenText TextStyle="TextStyle.Subtitle1">@Localizer["WelcomeText"]</RadzenText>
         </Authorized>
         <NotAuthorized>
-            <RadzenRow Style="width: 100%; height: 100%;" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Center">
+            <RadzenRow class="full-size" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Center">
                 <RadzenColumn Size="4">
                     <RadzenText TextStyle="TextStyle.H2" Style="font-weight: 600;">Make your study <span class="underline">easier</span></RadzenText>
                     <RadzenText TextStyle="TextStyle.H3" Style="color: dimgray;">Join now and see the difference!</RadzenText>
@@ -25,9 +27,9 @@
                     <RadzenButton Text="Search Theses" Click="@(() => NavigationManager.NavigateTo("theses"))"></RadzenButton>
                 </RadzenColumn>
                 <RadzenColumn Size="4">
-                    <div class="image-container">
+                    <div class="container-image">
+                        <div class="circle-image"></div>
                         <RadzenImage Path="digital-nomad.svg" />
-                        <div class="circle"></div>
                     </div>
                 </RadzenColumn>
             </RadzenRow>
