--- a/PhDManager.Web/wwwroot/style.css
+++ b/PhDManager.Web/wwwroot/style.css
@@ -1,10 +1,15 @@
-﻿.underline {
-    text-decoration: underline #ffc300 0.5rem;
+﻿#body {
+    padding: 0;
+    margin: 0;
 }
 
-.circle {
+.underline {
+    text-decoration: underline var(--rz-primary) 0.5rem;
+}
+
+.circle-image {
     background-color: var(--rz-primary);
-    opacity: 50%;
+    filter: contrast(75%);
     border-radius: 50%;
     width: 90%;
     height: 60%;
@@ -12,10 +17,38 @@
     position: absolute;
     left: 56%;
     bottom: 0;
-    transform: translate(-50%, 10%);
+    transform: translate(-50%, 0);
     z-index: -1;
 }
 
-.image-container {
+.container-image {
     position: relative;
+}
+
+.circle {
+    background-color: rgba(0, 0, 0, 0);
+    filter: blur(18vw);
+    position: absolute;
+    z-index: -2;
+}
+
+.circle-bottom {
+    background-image: radial-gradient(circle at 0% 100%, var(--rz-primary) 25%, rgba(0, 0, 0, 0) 25%);
+}
+
+.circle-top {
+    background-image: radial-gradient(circle at 100% 0%, var(--rz-primary) 25%, rgba(0, 0, 0, 0) 25%);
+}
+
+.full-size {
+    width: 100%;
+    height: 100%;
+}
+
+.fit {
+    width: fit-content;
+}
+
+.width-half {
+    width: 50vw;
 }
